--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^2.4.0",
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.3.0",
+    "koa-onerror": "^3.0.1",
     "koa-router": "^5.4.0"
   },
   "devDependencies": {
