--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-bodyparser": "^2.3.0",
     "koa-onerror": "^3.0.1",
     "koa-router": "^5.4.0",
+    "lodash": "^4.17.2",
     "node-fetch": "^1.6.3"
   },
   "devDependencies": {
