--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^7.2.1",
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.3.0",
+    "koa-ejs": "^3.0.0",
     "koa-onerror": "^3.0.1",
     "koa-router": "^5.4.0",
     "lodash": "^4.17.2",
