--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "lodash": "^4.17.2",
     "md5": "^2.2.1",
     "mongoose": "^4.7.2",
-    "node-fetch": "^1.6.3",
-    "normalize.css": "^5.0.0"
+    "node-fetch": "^1.6.3"
   },
   "devDependencies": {
     "eslint": "^3.12.1",
