--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A koa based framework",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development DEBUG=koaloha supervisor index.js",
-    "dev-heqiauto": "NODE_ENV=development COMPANY=heqiauto DEBUG=koaloha supervisor index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-server": "NODE_ENV=development DEBUG=koaloha supervisor ./server/index.js",
+    "dev-client": "node build/dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -31,10 +30,46 @@
     "lodash": "^4.17.2",
     "md5": "^2.2.1",
     "mongoose": "^4.7.2",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^1.6.3",
+    "vue": "^2.1.0",
+    "vue-router": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "^3.12.1",
-    "supervisor": "^0.12.0"
+    "supervisor": "^0.12.0",
+    "autoprefixer": "^6.4.0",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "babel-register": "^6.0.0",
+    "chalk": "^1.1.3",
+    "connect-history-api-fallback": "^1.1.0",
+    "css-loader": "^0.25.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "function-bind": "^1.0.2",
+    "html-webpack-plugin": "^2.8.1",
+    "http-proxy-middleware": "^0.17.2",
+    "json-loader": "^0.5.4",
+    "semver": "^5.3.0",
+    "opn": "^4.0.2",
+    "ora": "^0.3.0",
+    "shelljs": "^0.7.4",
+    "url-loader": "^0.5.7",
+    "vue-loader": "^10.0.0",
+    "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^0.14.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
