--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "md5": "^2.2.1",
     "mongoose": "^4.7.2",
     "node-fetch": "^1.6.3",
+    "normalize.css": "^5.0.0",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1"
   },
   "devDependencies": {
-    "eslint": "^3.12.1",
-    "supervisor": "^0.12.0",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
@@ -47,6 +46,7 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
+    "eslint": "^3.12.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -55,10 +55,13 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
+    "supervisor": "^0.12.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
