--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "co": "^4.6.0",
     "debug": "^2.4.0",
     "jsonwebtoken": "^7.2.1",
+    "kcors": "^1.3.1",
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.3.0",
     "koa-ejs": "^3.0.0",
