--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
     "lodash": "^4.17.2",
+    "marked": "^0.3.6",
     "md5": "^2.2.1",
     "mongoose": "^4.7.2",
     "node-fetch": "^1.6.3",
