--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "marked": "^0.3.6",
     "md5": "^2.2.1",
     "mongoose": "^4.7.2",
+    "nicedate": "^1.0.0",
     "node-fetch": "^1.6.3",
     "normalize.css": "^5.0.0",
     "vue": "^2.1.0",
